src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/AMDDrawBuffersBlend_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/AMDDrawBuffersBlend_StringErrorContext.class */
public final class AMDDrawBuffersBlend_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBlendFuncIndexedAMD(III)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDrawBuffersBlendErrorContext");
        methods.put("glBlendFuncSeparateIndexedAMD(IIIII)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDrawBuffersBlendErrorContext");
        methods.put("glBlendEquationIndexedAMD(II)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDrawBuffersBlendErrorContext");
        methods.put("glBlendEquationSeparateIndexedAMD(III)V", "net/labymod/core/laby3d/opengl/error/generated/AMDDrawBuffersBlendErrorContext");
        return methods;
    }
}
